unpackaged/main/default/objects/Session_Note__c/Session_Note__c.object-meta.xml
<CustomObject>
    <description>One entry in an ad-hoc session&#39;s running log. Replaces the single Session_Notes__c textarea (2026-08-06): discrete, timestamped, optionally tagged, individually attachable, and individually promotable to a Finding. Master-detail to Exploratory_Session__c because an entry has no meaning without its session and must inherit its sharing.</description>
    <label>Session Note</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>Session Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>