unpackaged/main/default/objects/Session_Note__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who logged the entry — the edit/delete gate (author-or-admin, enforced in UatSessionController). SetNull, not Restrict: the platform forbids Restrict on User lookups, so presence is an Apex concern.</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Session Notes</relationshipLabel>
    <relationshipName>Session_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>