unpackaged/main/default/objects/Session_Note__c/fields/Entry_Text__c.field-meta.xml
<CustomField>
    <fullName>Entry_Text__c</fullName>
    <description>What the tester wrote. Required in Apex (UatSessionController.addSessionNote), not by a validation rule, so the migration of legacy Session_Notes__c blobs can run without fighting it.</description>
    <label>Entry Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>