unpackaged/main/default/objects/Session_Note__c/fields/Exploratory_Session__c.field-meta.xml
<CustomField>
    <fullName>Exploratory_Session__c</fullName>
    <description>Owning ad-hoc session. Master-detail, not reparentable: an entry belongs to the session it was logged in, for good. Deleting the session deletes its entries — a Finding promoted from one survives (Source_Note__c is SetNull) but loses its origin trail.</description>
    <label>Session</label>
    <referenceTo>Exploratory_Session__c</referenceTo>
    <relationshipLabel>Session Notes</relationshipLabel>
    <relationshipName>Session_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>