unpackaged/main/default/objects/Session_Note__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <description>When the entry was logged. Stamped server-side at insert and never edited afterwards, so editing an entry&#39;s text does not move it in the timeline. Distinct from CreatedDate only for the migrated legacy blobs, which are back-dated to their session&#39;s start.</description>
    <label>Logged At</label>
    <type>DateTime</type>
</CustomField>