unpackaged/main/default/objects/Session_Note__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Optional one-word label chosen from the tag chips (Observation, Question, Unexpected, Follow-up by default). Deliberately TEXT, not a picklist: the available tags come from UAT_Focus_Prompt__mdt and a cycle can override them via Test_Cycle__c.Focus_Prompts__c, so the value set is config and must not be pinned in schema. Blank is valid — tagging is entirely optional.</description>
    <label>Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>