unpackaged/main/default/objects/Session_Note__c/fields/Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set only when the entry was logged from inside a scripted run (&quot;Note something off-script&quot;) — this is what pre-links an ad-hoc note to the case the tester was on. Blank for entries logged in the session page itself. SetNull so purging a run never blocks on, or deletes, a tester&#39;s notes.</description>
    <label>Logged From Run</label>
    <referenceTo>Test_Execution__c</referenceTo>
    <relationshipLabel>Session Notes</relationshipLabel>
    <relationshipName>Session_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>